--- a/Guia estelar de CSS/index.html
+++ b/Guia estelar de CSS/index.html
@@ -17,11 +17,35 @@
         <meta name="twitter:description" content="Anotando comandos aprendidos nos guias estelares da rocketseat.">
         <meta name="twitter:title" content="Guia estelar de CSS">
 
+        <link rel="stylesheet" href="style.css"> <!-- Linka a stylesheet. -->
+
+        <style> /* Configura o CSS direto dentro do HTML. */
+
+            #teste {
+
+                color: pink;
+
+            }
+
+        </style>
+
     </head>
 
     <body>
 
+        <div id="container" class="m-40">
 
+            <h2>Subtítulo</h2>
+
+        </div>
+
+        <h1>Evolua rápido</h1>
+        <p>Descrição</p>
+        <button>Embarcar</button>
+
+        <p style="color: red">Inli<strong>ne</strong></p> <!-- O style dentro da tag atribui um estilo apenas para o elemento dela. -->
+
+        <p id="teste">Cor rosa</p>
 
     </body>
 
