--- a/Guia estelar de CSS/index.html
+++ b/Guia estelar de CSS/index.html
@@ -51,6 +51,10 @@
 
         <p id="teste">Cor rosa</p>
 
+        <h1 class="title">Título</h1>
+
+        <p>Estilizando a página</p>
+
     </body>
 
 </html>
