--- a/Guia estelar de CSS/index.html
+++ b/Guia estelar de CSS/index.html
@@ -6,7 +6,7 @@
         <title>Guia estelar de CSS</title>
         <meta name="description" content="Anotando comandos aprendidos nos guias estelares da rocketseat.">
 
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Facebook. -->
