--- a/Guia estelar de HTML/index.html
+++ b/Guia estelar de HTML/index.html
@@ -6,7 +6,7 @@
         <title>Guia estelar de HTML</title>
         <meta name="description" content="Anotando comandos aprendidos nos guias estelares da rocketseat."> <!-- Descrição do site embaixo do nome quando você pesquisa no google. -->
 
-        <meta charset="utf-8"> <!-- Para aceitar a maior quantia de caracteres. -->
+        <meta charset="UTF-8"> <!-- Para aceitar a maior quantia de caracteres. -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Portabilidade para mobile. -->
 
         <link rel="icon" href="bakugou.jpg"/> <!-- Coloca um ícone do lado do nome da guia. -->
